[tool.poetry]
name = "owslib"
version = "0.23.dev0"
description = "OWSLib is a Python package for client programming with Open Geospatial Consortium (OGC) web service (hence OWS) interface standards, and their related content models. Full documentation is available at http://geopython.github.io/OWSLib OWSLib provides a common API for accessing service metadata and wrappers for numerous OGC Web Service interfaces."
authors = ["geopython"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.6"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
requests = "^2.25.1"
pyproj = "^3.0.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
Pillow = "^8.1.0"
Sphinx = "^3.4.3"
tox = "^3.21.3"
twine = "^3.3.0"
wheel = "^0.36.2"
coverage = "^5.4"
coveralls = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
